fix svg graphics vertical overflow problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,11 @@
-#challengeGraph rect {
+.graphics {
+    margin: 0;
+    padding: 0;
+    border-style: none;
+    height: 99%;
+}
+
+#exploreGraph rect {
     stroke: white;
     fill: steelblue;
 }
